one more spacing fix

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -12,7 +12,7 @@ h2 {
   text-align: center;
   margin: 0;
   position: absolute;
-  top: calc(50% - 32px);
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
@@ -75,6 +75,12 @@ h2 span {
   font: 56px/72px ProximaNova-Regular, sans-serif;
   font-weight: 800;
   letter-spacing: 2px;
+  text-align: center;
+  margin: 0;
+  position: absolute;
+  top: calc(50% - 32px);
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .parallax__background {
   margin-top: 0;
